@@ -940,7 +940,8 @@ class PH
         "html-merger",
         "tsf",
         "xpath",
-        "certificate"
+        "certificate",
+        "ssh-connector"
         );
 
 
@@ -1094,6 +1095,9 @@ class PH
 
         elseif( $type == "xpath" )
             $util = new XPATH($type, $argv, $argc,$PHP_FILE." type=".$type, $_supportedArguments, $_usageMsg, $projectfolder);
+
+        elseif( $type == "ssh-connector" )
+            $util = new SSH_CONNECTOR__( $type, $argv, $argc, $PHP_FILE." type=".$type, $_supportedArguments, $_usageMsg, $projectfolder);
 
         elseif( $type == 'address'
             || $type == 'service'
