@@ -132,7 +132,7 @@ elseif( isset(PH::$args['command']) )
         derr("missing argument 'out=[outputfile.txt]'");
 }
 else
-    derr("missing argument 'vendor=[VENDOR]' OR 'command=[COMMANDS]' OR 'setcommandfile=[FILE]'");
+    derr("missing argument 'vendor=[VENDOR]' OR 'command=[COMMANDS]' OR 'setcommand-file=[FILE]'");
 
 
 if( $vendor == "paloalto" )
