@@ -2,6 +2,7 @@ CHANGELOG
 
 2.0.73
 UTIL:
+* type=ssh-connector | introduction of new utility script
 
 BUGFIX:
 
